# NEAR

./: CHANGELOG.md  CONTRIBUTING.md  README.md  example.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/near_score/: __init__.py  _version_.py  near_score.py
tests/: __init__.py  test_near_score.py
